info ajout image

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
         <p class="center-text" id="space_okapi">Collection Space Okapi</p>
         <div class="wrap">
 
+
+          <!-- Ajouter une Image -->
           <div class="box">
             <div class="boxInner">
               <img src="images/okapie_gentleman.jpg"/>
@@ -118,6 +120,7 @@
                </div>
              </div>
            </div>
+           <!-- Ajouter une Image -->
           
            <div class="box">
             <div class="boxInner">
