--- a/index.html
+++ b/index.html
@@ -152,6 +152,17 @@
             </div>
            </div>
 
+             <!-- Ajouter une Image -->
+          <div class="box">
+            <div class="boxInner">
+              <img src="images/okapie_bitch2.jpg"/>
+               <div class="desc">
+                 <p> Space Okapi - bitch </p>
+                
+               </div>
+             </div>
+           </div>
+           <!-- Ajouter une Image -->
 
         </div>
       </div>
