update correction bitch

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
              <!-- Ajouter une Image -->
           <div class="box">
             <div class="boxInner">
-              <img src="images/okapie_bitch2.jpg"/>
+              <img src="images/okapi_bitch2.jpg"/>
                <div class="desc">
                  <p> Space Okapi - bitch </p>
                 
