--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             // generate a five digit number for the contact_number variable
             this.contact_number.value = (Math.random() * 100000) | 0;
             // these IDs from the previous steps
-            emailjs.sendForm("contact_service", "contact_form", this).then(
+            emailjs.sendForm("service_2qfkphh", "template_6hx9bn4", this).then(
               function () {
                 console.log("SUCCESS!");
               },
